--- a/src/components/cartPopup/CartPopup.css
+++ b/src/components/cartPopup/CartPopup.css
@@ -23,6 +23,17 @@
   margin-bottom: 20px;
 }
 
+.close-button {
+  border: 0px solid white;
+  border-radius: 8px;
+  font-size: 22px;
+  background-color: inherit;
+}
+
+.close-button:hover {
+  background-color: #f5f5f5;
+}
+
 .cart-popup-close {
   background: none;
   border: none;
@@ -51,19 +62,22 @@
   border: 1.5px solid #d4af37;
   border-radius: 16px;
   background-color: #fafafa;
+  font-size: 30px;
   box-shadow: 0 4px 8px rgba(212, 175, 55, 0.1);
 }
 
 .cart-item-image {
-  width: 56px;
-  height: 56px;
+  width: 60px;
+  height: 60px;
   object-fit: cover;
   border-radius: 8px;
+  justify-content: center;
+  align-items: center;
 }
 
 .cart-item-details {
   flex: 1;
-  font-size: 16px;
+  font-size: 18px;
   color: #333;
   justify-content: center;
   align-items: center;
@@ -99,8 +113,8 @@
   height: 32px;
   font-size: 18px;
   border: none;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: inherit;
+  border: 0px solid #ccc;
   cursor: pointer;
   border-radius: 6px;
   transition: background-color 0.2s;
@@ -163,11 +177,6 @@
   .cart-item {
     padding: 12px;
     border-radius: 12px;
-  }
-
-  .cart-item-image {
-    width: 48px;
-    height: 48px;
   }
 
   .quantity-controls button {
